--- a/index.html
+++ b/index.html
@@ -281,19 +281,19 @@ margin-right:auto;
     <li><a href="pages/faculty.html">Faculty</a></li>
 	  <li><a href="#">Programs</a>
         <ul>
-          <li><a href="pages/B-courses.html">Bachelors</a>
-		  </li>
-          <li><a href="pages/under-construction.html">Masters</a>
-		  </li>
-          <li><a href="pages/under-construction.html">PhD</a>
-		  </li>
+            <li><a href="pages/B-courses.html">Bachelors</a>
+            </li>
+            <li><a href="pages/B-courses-masters.html">Masters</a>
+            </li>
+            <li><a href="pages/B-courses-phd.html">PhD</a>
+            </li>
         </ul>
       </li>
 	  <li><a href="#">Resources</a>
         <ul>
-          <li><a href="pages/lib.html">Library</a></li>
-          <li><a href="pages/resourses.html">Labs</a></li>
-          <li><a href="pages/under-construction.html">Downloads</a></li>
+          <li><a href="pages/library.html">Library</a></li>
+          <li><a href="pages/labs.html">Labs</a></li>
+          <li><a href="http://quest.edu.pk/downloads/downloads.php">Downloads</a></li>
         </ul>
       </li>
 	  <li><a href="#">Research Groups</a>
@@ -373,9 +373,9 @@ margin-right:auto;
           <li style="margin-bottom:5px;"><a href="pages/under-construction.html">Virtual Tour</a></li>
           <li style="margin-bottom:5px;"><a href="pages/gallery.html">Gallery</a></li>
           <li style="margin-bottom:5px;"><a href="http://pec.org.pk" target="_blank">PEC Accerditation</a></li>
-          <li style="margin-bottom:5px;"><a href="pages/under-construction.html">Scholarships</a></li>
-          <li style="margin-bottom:5px;"><a href="pages/under-construction.html">Internships</a></li>
-		  <li style="margin-bottom:5px;"><a href="pages/under-construction.html">Downloads</a></li>
+          <li style="margin-bottom:5px;"><a href="http://www.quest.edu.pk/facilities/scholarships.php">Scholarships</a></li>
+          <li style="margin-bottom:5px;"><a href="http://quest.edu.pk/news/PMInternshipProgramme.php">Internships</a></li>
+		  <li style="margin-bottom:5px;"><a href="http://quest.edu.pk/downloads/downloads.php">Downloads</a></li>
         </ul>
       </div><BR>
 	  <div class="holder">
@@ -402,7 +402,7 @@ margin-right:auto;
       To achieve this goal, we combine the theoritical foundations of computing with the practical
           engineering knowledge vital to industry, to provide a broad and integrated curriculum.
       </p>
-	  <img src="images/pardeep_small.jpg" style="padding:0px; width:150px; height:150px;margin:-28% 0 0 0px;">
+	  <img src="images/pardeep_main.jpg" style="padding:0px; width:150px; height:150px;margin:-28% 0 0 0px;">
 
      </div>
     <!-- ############ -->
@@ -425,7 +425,7 @@ margin-right:auto;
 	  <br>
       <div class="holder">
         <h2 class="title" style="font-size:18px;margin-top:12px;">Upcomings</h2>
-			<p><a href="http://mcct.quest.edu.pk" target="_blank">2nd International Conference on Modern Communication &amp; Computing Technologies - MCCT'18</a><br><br>
+			<p><a href="http://mcct.quest.edu.pk/cfp.html" target="_blank">2nd International Conference on Modern Communication &amp; Computing Technologies - MCCT'18</a><br><br>
 			<a href="http://pec.org.pk" target="_blank">PEC Visit</a>
 			</p>
       </div>
@@ -447,7 +447,7 @@ margin-right:auto;
       <div id="right_column" style="width:21%;margin:3.5% 0px 0px 85%;">
           <div class="holder">
               <h2 class="title" style="font-size:18px;margin-top:12px;">Recent Events</h2>
-              <p><a href="http://quest.edu.pk" target="_blank">C-CUBE Competition</a><br><br>
+              <p><a href="https://www.facebook.com/CcubeCse/?hc_ref=ARSQEv6kqnt0JUsnJTOz8G0DMeswL55Wy5uNvXG_D1qCA3QqGP2Nbk2ewGnbB-t1qX4" target="_blank">C-CUBE Competition</a><br><br>
                   <a href="http://quest.edu.pk" target="_blank">IoT 2017 Workshop</a><br><br>
                   <a href="http://attendance.quest.edu.pk" target="_blank">PEC CPD Workshop</a><br><br>
                   <a href="https://ignite.org.pk/" target="_blank">National ICT R&D Fund</a>
@@ -461,7 +461,7 @@ margin-right:auto;
 <!-- ####################################################################################################### -->
 <div class="wrapper">
   <div id="copyright" class="clear">
-    <center><p class="fl_left">Copyright &copy; 2016-17 - All Rights Reserved <br> <a href="http://www.quest.edu.pk">QUEST, Nawabshah-Pakistan</a></p></center>
+    <center><p class="fl_left">Copyright &copy; 2017-18 - All Rights Reserved <br> <a href="http://www.quest.edu.pk">QUEST, Nawabshah-Pakistan</a></p></center>
     <center><p class="fl_right">Developed and Maintained by <br><a target="_blank" href="http://zuhaib-shaikh.neocities.org">Zuhaib A. Shaikh</a> | <a target="_blank" href="http://umair-khan.quest.edu.pk">Umair A. Khan</a></p></center>
   </div>
 </div>
