--- a/pages/B-courses-masters.html
+++ b/pages/B-courses-masters.html
@@ -72,23 +72,11 @@
 <div class="wrapper row3">
 <br>
 </div>
-<div class="wrapper row4">
-  <div id="container" class="clear" >
-    <!-- ####################################################################################################### -->
-    <div id="content" style="width:100%;marign-left:10%;padding-bottom:10%">
-      <img src="../images/pec.png" style="height:250px;">
-        <p align="justify" style="margin-left:30%;margin-top:-22%;font-size:110%;color:black;line-height:22px">Pakistan Engineering Council (PEC) is a well-known organization that
-            registers engineers and accredits engineering programs offered by many universities in Pakistan
-            including QUEST. PEC ensures and manages the standards for engineering products and services. The
-            council also encourages, facilitates and regulates working of professional engineering bodies for
-            creativity and as custodians of engineering under the umbrella of the council. <br>
-            Computer Systems Department is accredited form PEC up to 2013 batch. While PEC's next visit for the accreditation of
-            current batches is due in the month of November 2017.</p>
-	</div>
+<!-- ####################################################################################################### -->
+<iframe src="course/1st_masters.html" style="border:0px;width:100%;height:750px;position:center;overflow:hidden;padding:0px 0px 2px 0px;" scrolling="no">
 
-
-  </div>
-</div>
+</iframe>
+<!-- ####################################################################################################### -->
 <div class="wrapper">
     <div id="copyright" class="clear">
         <center><p class="fl_left">Copyright &copy; 2017-18 - All Rights Reserved <br> <a href="http://www.quest.edu.pk">QUEST, Nawabshah-Pakistan</a></p></center>
