--- a/pages/faculty.html
+++ b/pages/faculty.html
@@ -49,17 +49,17 @@
                 <ul>
                     <li><a href="B-courses.html">Bachelors</a>
                     </li>
-                    <li><a href="under-construction.html">Masters</a>
+                    <li><a href="B-courses-masters.html">Masters</a>
                     </li>
-                    <li><a href="under-construction.html">PhD</a>
+                    <li><a href="B-courses-phd.html">PhD</a>
                     </li>
                 </ul>
             </li>
             <li><a href="#">Resources</a>
                 <ul>
-                    <li><a href="lib.html">Library</a></li>
-                    <li><a href="resourses.html">Labs</a></li>
-                    <li><a href="under-construction.html">Downloads</a></li>
+                    <li><a href="library.html">Library</a></li>
+                    <li><a href="labs.html">Labs</a></li>
+                    <li><a href="http://quest.edu.pk/downloads/downloads.php">Downloads</a></li>
                 </ul>
             </li>
             <li><a href="#">Research Groups</a>
@@ -76,6 +76,7 @@
         <div  class="clear"></div>
     </div>
 </div>
+
 <!-- ####################################################################################################### -->
 
 <div class="wrapper row3">
@@ -129,10 +130,10 @@
 </div>
 <!-- ####################################################################################################### -->
 <div class="wrapper">
-  <div id="copyright" class="clear">
-    <center><p class="fl_left">Copyright &copy; 2016-17 - All Rights Reserved <br> <a href="http://www.quest.edu.pk">QUEST, Nawabshah-Pakistan</a></p></center>
-    <center><p class="fl_right">Developed and Maintained by <br><a target="_blank" href="http://zuhaib-shaikh.neocities.org">Zuhaib A. Shaikh</a> | <a target="_blank" href="http://umair-khan.quest.edu.pk">Umair A. Khan</a></p></center>
-  </div>
+    <div id="copyright" class="clear">
+        <center><p class="fl_left">Copyright &copy; 2017-18 - All Rights Reserved <br> <a href="http://www.quest.edu.pk">QUEST, Nawabshah-Pakistan</a></p></center>
+        <center><p class="fl_right">Developed and Maintained by <br><a target="_blank" href="http://zuhaib-shaikh.neocities.org">Zuhaib A. Shaikh</a> | <a target="_blank" href="http://umair-khan.quest.edu.pk">Umair A. Khan</a></p></center>
+    </div>
 </div>
 </body>
 </html>
