--- a/pages/gallery/gallery.html
+++ b/pages/gallery/gallery.html
@@ -192,6 +192,15 @@ body{background-color:white;}
   </div>
 </div>
 
+<div class="responsive">
+  <div class="img">
+    <a target="_blank" href="../../images/gallery/16.jpg">
+      <img src="../../images/gallery/15.jpg" alt="dept3" width="600" height="400">
+    </a>
+    <div class="desc">Networking Lab</div>
+  </div>
+</div>
+
 
 
 
