--- a/pages/library.html
+++ b/pages/library.html
@@ -39,17 +39,17 @@
                 <ul>
                     <li><a href="B-courses.html">Bachelors</a>
                     </li>
-                    <li><a href="under-construction.html">Masters</a>
+                    <li><a href="B-courses-masters.html">Masters</a>
                     </li>
-                    <li><a href="under-construction.html">PhD</a>
+                    <li><a href="B-courses-phd.html">PhD</a>
                     </li>
                 </ul>
             </li>
             <li><a href="#">Resources</a>
                 <ul>
-                    <li><a href="lib.html">Library</a></li>
-                    <li><a href="resourses.html">Labs</a></li>
-                    <li><a href="under-construction.html">Downloads</a></li>
+                    <li><a href="library.html">Library</a></li>
+                    <li><a href="labs.html">Labs</a></li>
+                    <li><a href="http://quest.edu.pk/downloads/downloads.php">Downloads</a></li>
                 </ul>
             </li>
             <li><a href="#">Research Groups</a>
@@ -66,21 +66,78 @@
         <div  class="clear"></div>
     </div>
 </div>
+
 <!-- ####################################################################################################### -->
 
 <div class="wrapper row3">
 <br>
 </div>
-<!-- ####################################################################################################### -->
-<iframe src="library/library.html" style="border:0px;width:100%;height:885px;position:center;overflow:hidden;padding:0px 0px 2px 0px;" scrolling="no">
+<div class="wrapper row4">
+    <img src="../images/library.jpg" style="margin-top:2%;width:950px;height:280px;margin-left:13%">
 
-</iframe>
+    <div id="container" class="clear">
+
+        <p style="text-align: justify"> The Central Library has in stock more than 13,100 book titles and about 60,000 total books related to Engineering, science and technology, which is being housed in the Central Library building near BSector. A number of engineering and technology research journals from U.SA. and U.K. and other countries are on current subscription. Local periodicals/Journals are also acquired every month for enhancing the knowledge of students in current affair & every day Science & Technology.</p>
+
+        <p style="text-align: justify">    There are more than 9500 text-books in the Book-Bank, which are also available for students for one Semester/term on nominal charges. The collection of books is being updated continuously and purchased books are acquired through University Library Committee on the recommendations of senior faculty members and subject teachers, which makes the collection most suited and beneficial to the students. Besides the text-books, the latest reference materials are also acquired every year to keep the users of the library abreast with the Latest knowledge. A new section has been established of newspapers/periodical Section at Ist: floor of central library building where daily newspapers and current periodicals/newsletters, journal are displayed for easy access to users.</p>
+
+        <p style="text-align: justify">    A good number of newspapers are available in the library in English, Urdu and Sindhi Languages. The facility of digital library is also available where 23,000 Research journals and more than 45000 books of leading publishers and societies can be free online access in university premises for research purpose. This facility is provided by HEC to all public sector universities through their HEC National Digital Library Program. The QUEST central library is growing day by day with latest collection mainly on engineering & Science disciplines. The new and latest additions are always preferred to procure in order to provide the latest information to Students and faculty members of QUEST.</p>
+
+        <p style="text-align: justify">    All the technical functions are computerized, the link of Online Public Access Catalogue (OPAC) is placed on website of QUEST for the easy access to the users. The OPAC provides the detailed information of the material available in library. Besides this, Electronic magnetic Security System is installed for the collection of reference Section. </p>
+        <p style="text-align: justify"> The details of the books at the central library is summarized as follows. </p>
+        <div id="content" style="width:86%;margin:45% 0px 0px 20%px;">
+            <h1 style="font-size:16px;">BOOKS @ THE CENTRAL LIBRARY</h1>
+            <br>
+            <table style="width:100%;color:BLACK;font-size:12;border:0;text-align:center;line-height:26px;border:1px solid grey;">
+                <tr style="background-color:#E0DFDF">
+                    <th> S# </th>
+                    <th> CATEGORY </th>
+                    <th> QUANTITY </th>
+                </tr>
+                <tr>
+                    <td> 1 </td>
+                    <td> Number of books</td>
+                    <td> 64,478 </td>
+                </tr>
+                <tr>
+                    <td> 2 </td>
+                    <td> Number of Titles </td>
+                    <td> 15,441 </td>
+                </tr>
+                <tr>
+                    <td> 3 </td>
+                    <td> CSE total books </td>
+                    <td> 7,625 </td>
+                </tr>
+                <tr>
+                    <td> 4 </td>
+                    <td> CSE titles </td>
+                    <td> 2,110 </td>
+                </tr>
+                <tr>
+                    <td> 5 </td>
+                    <td> No. of books in the book bank </td>
+                    <td> 9,500 </td>
+                </tr>
+                <tr>
+                    <td> 6 </td>
+                    <td> Research journals subscribed </td>
+                    <td> 35 </td>
+                </tr>
+
+                </tr>
+            </table>
+
+
+        </div>
+    </div>
+    </div>
 <!-- ####################################################################################################### -->
 <div class="wrapper">
-  <div id="copyright" class="clear">
-    <center><p class="fl_left">Copyright &copy; 2015-16 - All Rights Reserved <br> <a href="http://www.quest.edu.pk">QUEST, Nawabshah-Pakistan</a></p></center>
-    <center><p class="fl_right">Developed and Maintained by <br><a target="_blank" href="http://zuhaib-shaikh.neocities.org">Zuhaib A. Shaikh</a> | <a target="_blank" href="http://umair-khan.quest.edu.pk">Umair A. Khan</a><br><a target="_blank" href="https://www.facebook.com/daniyalsaeed6">Daniyal(14cs13)</a> | <a target="_blank" href="https://www.facebook.com/aaqibakhtarblogger">Aaqib(14cs11)</a></p></center>
-  </div>
+    <div id="copyright" class="clear">
+        <center><p class="fl_left">Copyright &copy; 2017-18 - All Rights Reserved <br> <a href="http://www.quest.edu.pk">QUEST, Nawabshah-Pakistan</a></p></center>
+        <center><p class="fl_right">Developed and Maintained by <br><a target="_blank" href="http://zuhaib-shaikh.neocities.org">Zuhaib A. Shaikh</a> | <a target="_blank" href="http://umair-khan.quest.edu.pk">Umair A. Khan</a></p></center>
+    </div>
 </div>
 </body>
 </html>
