--- a/pages/contact.html
+++ b/pages/contact.html
@@ -39,17 +39,17 @@
                 <ul>
                     <li><a href="B-courses.html">Bachelors</a>
                     </li>
-                    <li><a href="under-construction.html">Masters</a>
+                    <li><a href="B-courses-masters.html">Masters</a>
                     </li>
-                    <li><a href="under-construction.html">PhD</a>
+                    <li><a href="B-courses-phd.html">PhD</a>
                     </li>
                 </ul>
             </li>
             <li><a href="#">Resources</a>
                 <ul>
-                    <li><a href="lib.html">Library</a></li>
-                    <li><a href="resourses.html">Labs</a></li>
-                    <li><a href="under-construction.html">Downloads</a></li>
+                    <li><a href="library.html">Library</a></li>
+                    <li><a href="labs.html">Labs</a></li>
+                    <li><a href="http://quest.edu.pk/downloads/downloads.php">Downloads</a></li>
                 </ul>
             </li>
             <li><a href="#">Research Groups</a>
@@ -66,6 +66,7 @@
         <div  class="clear"></div>
     </div>
 </div>
+
 <!-- ####################################################################################################### -->
 
 
@@ -92,7 +93,7 @@
 
 
         <div style="margin-left:43%;margin-top:-3%">
-            <p style="font-size:110%;color:black">pardeep.kumar@quest.edu.pk, ch_cse@quest.edu.pk </p>
+            <p style="font-size:110%;color:black">pardeep.kumar@quest.edu.pk, ch_cs@quest.edu.pk </p>
         </div>
 
         <div>
@@ -115,10 +116,10 @@
 
 <!-- ####################################################################################################### -->
 <div class="wrapper">
-  <div id="copyright" class="clear">
-    <center><p class="fl_left">Copyright &copy; 2015-16 - All Rights Reserved <br> <a href="http://www.quest.edu.pk">QUEST, Nawabshah-Pakistan</a></p></center>
-    <center><p class="fl_right">Developed and Maintained by <br><a target="_blank" href="http://zuhaib-shaikh.neocities.org">Zuhaib A. Shaikh</a> | <a target="_blank" href="http://umair-khan.quest.edu.pk">Umair A. Khan</a></p></center>
-  </div>
+    <div id="copyright" class="clear">
+        <center><p class="fl_left">Copyright &copy; 2017-18 - All Rights Reserved <br> <a href="http://www.quest.edu.pk">QUEST, Nawabshah-Pakistan</a></p></center>
+        <center><p class="fl_right">Developed and Maintained by <br><a target="_blank" href="http://zuhaib-shaikh.neocities.org">Zuhaib A. Shaikh</a> | <a target="_blank" href="http://umair-khan.quest.edu.pk">Umair A. Khan</a></p></center>
+    </div>
 </div>
 </body>
 </html>
