--- a/pages/under-construction.html
+++ b/pages/under-construction.html
@@ -30,55 +30,43 @@
     </div>
 </div>
 <!-- ####################################################################################################### -->
-<div class="wrapper row2">
-  <div class="main-navigation">
-    <ul>
-      <li><a href="../index.html">Home</a></li>  
-    <li><a href="faculty.html">Faculty</a></li>
-	  <li><a href="#">Programs</a>
+<div class="wrapper row2" style="margin-top:-1%">
+    <div class="main-navigation" style="line-height:14px;word-spacing:0px; width:765px;">
         <ul>
-          <li><a href="#">Bachelors</a>
-				<ul>
-				  <li><a href="faculty.html">Faculty</a></li>
-				  <li><a href="B-courses.html">Courses</a></li>
-				  <li><a href="students.html">Students</a></li>
-				</ul>
-		  </li>
-          <li><a href="#">Masters</a>
-			<ul>
-				  <li><a href="programs/masters/faculty.html">Faculty</a></li>
-				  <li><a href="under-construction.html">Courses</a></li>
-			</ul>
-		  </li>
-          <li><a href="#">PhD</a>
-			<ul>
-				  <li><a href="programs/phd/faculty.html">Faculty</a></li>
-				  <li><a href="under-construction.html">Courses</a></li>
-			</ul>
-		  </li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="faculty.html">Faculty</a></li>
+            <li><a href="#">Programs</a>
+                <ul>
+                    <li><a href="B-courses.html">Bachelors</a>
+                    </li>
+                    <li><a href="B-courses-masters.html">Masters</a>
+                    </li>
+                    <li><a href="B-courses-phd.html">PhD</a>
+                    </li>
+                </ul>
+            </li>
+            <li><a href="#">Resources</a>
+                <ul>
+                    <li><a href="library.html">Library</a></li>
+                    <li><a href="labs.html">Labs</a></li>
+                    <li><a href="http://quest.edu.pk/downloads/downloads.php">Downloads</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Research Groups</a>
+                <ul>
+                    <li><a href="CV.html">Computer Vision</a></li>
+                    <li><a href="NS.html">Network Security</a></li>
+                    <li><a href="WSN.html">Wireless Sensor Network</a></li>
+                    <li><a href="publications.html">Publications</a></li>
+                </ul>
+            </li>
+            <li><a href="PEC.html">PEC Accreditation</a></li>
+            <li  class="last"><a href="contact.html">Contact</a></li>
         </ul>
-      </li>
-	  <li><a href="#">Resources</a>
-        <ul>
-          <li><a href="lib.html">Library</a></li>
-          <li><a href="resourses.html">Labs</a></li>
-          <li><a href="under-construction.html">Downloads</a></li>
-        </ul>
-      </li>
-	  <li><a href="#">Research Groups</a>
-        <ul>
-          <li><a href="under-construction.html">Computer Vision</a></li>
-          <li><a href="under-construction.html">Network Security</a></li>
-          <li><a href="under-construction.html">Wireless Sensor Network</a></li>
-		  <li><a href="publications.html">Publications</a></li>
-        </ul>
-      </li>
-	  <li><a href="under-construction.html">Software Development</a></li>
-	  <li  class="last"><a href="contact.html">Contact</a></li>
-    </ul>
-    <div  class="clear"></div>
-  </div>
+        <div  class="clear"></div>
+    </div>
 </div>
+
 <!-- ####################################################################################################### -->
 
 <div class="wrapper row3">
@@ -94,10 +82,10 @@
   </div>
 </div>
 <div class="wrapper">
-  <div id="copyright" class="clear">
-    <center><p class="fl_left">Copyright &copy; 2015-16 - All Rights Reserved <br> <a href="http://www.quest.edu.pk">QUEST, Nawabshah-Pakistan</a></p></center>
-    <center><p class="fl_right">Developed and Maintained by <br><a target="_blank" href="http://zuhaib-shaikh.neocities.org">Zuhaib A. Shaikh</a> | <a target="_blank" href="http://umair-khan.quest.edu.pk">Umair A. Khan</a></p></center>
-  </div>
+    <div id="copyright" class="clear">
+        <center><p class="fl_left">Copyright &copy; 2017-18 - All Rights Reserved <br> <a href="http://www.quest.edu.pk">QUEST, Nawabshah-Pakistan</a></p></center>
+        <center><p class="fl_right">Developed and Maintained by <br><a target="_blank" href="http://zuhaib-shaikh.neocities.org">Zuhaib A. Shaikh</a> | <a target="_blank" href="http://umair-khan.quest.edu.pk">Umair A. Khan</a></p></center>
+    </div>
 </div>
 </body>
 </html>
