--- a/pages/PEC.html
+++ b/pages/PEC.html
@@ -80,7 +80,7 @@
             registers engineers and accredits engineering programs offered by many universities in Pakistan
             including QUEST. PEC ensures and manages the standards for engineering products and services. The
             council also encourages, facilitates and regulates working of professional engineering bodies for
-            creativity and as custodians of engineering under the umbrella of the council. <br>
+            creativity and as custodians of engineering under the umbrella of the council. <br><br>
             Computer Systems Department is accredited form PEC up to 2013 batch. While PEC's next visit for the accreditation of
             current batches is due in the month of November 2017.</p>
 	</div>
