--- a/pages/under-construction.html
+++ b/pages/under-construction.html
@@ -7,7 +7,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <link rel="stylesheet" href="../layout/styles/layout.css" type="text/css" />
 <script type="text/javascript" src="../layout/scripts/jquery.min.js"></script>
-<!-- liteAccordion is Homepage Only -->
 <link rel="stylesheet" href="../layout/scripts/liteaccordion-v2.2/css/liteaccordion.css" type="text/css" />
 </head>
 <body id="top">
@@ -30,54 +29,41 @@
     </div>
 </div>
 <!-- ####################################################################################################### -->
-<div class="wrapper row2">
-  <div class="main-navigation">
-    <ul>
-      <li><a href="../index.html">Home</a></li>  
-    <li><a href="faculty.html">Faculty</a></li>
-	  <li><a href="#">Programs</a>
+<div class="wrapper row2" style="margin-top:-1%">
+    <div class="main-navigation" style="line-height:14px;word-spacing:0px; width:765px;">
         <ul>
-          <li><a href="#">Bachelors</a>
-				<ul>
-				  <li><a href="faculty.html">Faculty</a></li>
-				  <li><a href="B-courses.html">Courses</a></li>
-				  <li><a href="students.html">Students</a></li>
-				</ul>
-		  </li>
-          <li><a href="#">Masters</a>
-			<ul>
-				  <li><a href="programs/masters/faculty.html">Faculty</a></li>
-				  <li><a href="under-construction.html">Courses</a></li>
-			</ul>
-		  </li>
-          <li><a href="#">PhD</a>
-			<ul>
-				  <li><a href="programs/phd/faculty.html">Faculty</a></li>
-				  <li><a href="under-construction.html">Courses</a></li>
-			</ul>
-		  </li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="faculty.html">Faculty</a></li>
+            <li><a href="#">Programs</a>
+                <ul>
+                    <li><a href="B-courses.html">Bachelors</a>
+                    </li>
+                    <li><a href="under-construction.html">Masters</a>
+                    </li>
+                    <li><a href="under-construction.html">PhD</a>
+                    </li>
+                </ul>
+            </li>
+            <li><a href="#">Resources</a>
+                <ul>
+                    <li><a href="lib.html">Library</a></li>
+                    <li><a href="resourses.html">Labs</a></li>
+                    <li><a href="under-construction.html">Downloads</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Research Groups</a>
+                <ul>
+                    <li><a href="CV.html">Computer Vision</a></li>
+                    <li><a href="NS.html">Network Security</a></li>
+                    <li><a href="WSN.html">Wireless Sensor Network</a></li>
+                    <li><a href="publications.html">Publications</a></li>
+                </ul>
+            </li>
+            <li><a href="PEC.html">PEC Accreditation</a></li>
+            <li  class="last"><a href="contact.html">Contact</a></li>
         </ul>
-      </li>
-	  <li><a href="#">Resources</a>
-        <ul>
-          <li><a href="lib.html">Library</a></li>
-          <li><a href="resourses.html">Labs</a></li>
-          <li><a href="under-construction.html">Downloads</a></li>
-        </ul>
-      </li>
-	  <li><a href="#">Research Groups</a>
-        <ul>
-          <li><a href="under-construction.html">Computer Vision</a></li>
-          <li><a href="under-construction.html">Network Security</a></li>
-          <li><a href="under-construction.html">Wireless Sensor Network</a></li>
-		  <li><a href="publications.html">Publications</a></li>
-        </ul>
-      </li>
-	  <li><a href="under-construction.html">Software Development</a></li>
-	  <li  class="last"><a href="contact.html">Contact</a></li>
-    </ul>
-    <div  class="clear"></div>
-  </div>
+        <div  class="clear"></div>
+    </div>
 </div>
 <!-- ####################################################################################################### -->
 
@@ -86,16 +72,17 @@
 </div>
 <div class="wrapper row4">
   <div id="container" class="clear"> 
+  <br>
     <!-- ####################################################################################################### -->
     <div id="content" style="width:100%;text-align:center;margin:30px 0;">
       <img src="../images/under-construction.png" style="height:250px;">
 	</div>
-	
+	<br>
   </div>
 </div>
 <div class="wrapper">
   <div id="copyright" class="clear">
-    <center><p class="fl_left">Copyright &copy; 2015-16 - All Rights Reserved <br> <a href="http://www.quest.edu.pk">QUEST, Nawabshah-Pakistan</a></p></center>
+    <center><p class="fl_left">Copyright &copy; 2016-17 - All Rights Reserved <br> <a href="http://www.quest.edu.pk">QUEST, Nawabshah-Pakistan</a></p></center>
     <center><p class="fl_right">Developed and Maintained by <br><a target="_blank" href="http://zuhaib-shaikh.neocities.org">Zuhaib A. Shaikh</a> | <a target="_blank" href="http://umair-khan.quest.edu.pk">Umair A. Khan</a></p></center>
   </div>
 </div>
