--- a/pages/course/2nd_masters_ME.html
+++ b/pages/course/2nd_masters_ME.html
@@ -17,15 +17,15 @@
 
 <div id="left_column" style="width:13%;margin-left:-4%;">
       <div class="holder" style="height:520px;">
-        <h1 class="title" style="font-size:18px;">Scheme</h1>
+        <h1 class="title" style="font-size:18px;">MCCN</h1>
         <ul class="nostart" style="line-height:30px;">
-			<li><a href="1st_masters.html" style="color:brown;"><b>First Year</b></a></li>
+			<li><a href="1st_masters.html"><b>First Year</b></a></li>
 			<li><a href="2nd_masters.html" ><b>Second Year</b></a></li>
-        </ul>
-		  <h1 class="title" style="font-size:18px;">ME</h1>
+        </ul><br><br>
+		  <h1 class="title" style="font-size:18px;">MCSE</h1>
 		  <ul class="nostart" style="line-height:30px;">
-			  <li><a href="1st_masters _ME.html" style="color:brown;"><b>First Year</b></a></li>
-			  <li><a href="2nd_masters_ME.html" ><b>Second Year</b></a></li>
+			  <li><a href="1st_masters _ME.html"><b>First Year</b></a></li>
+			  <li><a href="2nd_masters_ME.html" style="color:brown;"><b>Second Year</b></a></li>
 		  </ul>
       </div>
 	  <br>
