--- a/pages/course/1st_masters.html
+++ b/pages/course/1st_masters.html
@@ -21,10 +21,10 @@
         <ul class="nostart" style="line-height:30px;">
           <li><a href="1st_masters.html" style="color:brown;"><b>First Year</b></a></li>
           <li><a href="2nd_masters.html" ><b>Second Year</b></a></li>
-        </ul>
-		  <h1 class="title" style="font-size:18px;">ME</h1>
+        </ul><br><br>
+		  <h1 class="title" style="font-size:18px;">MCSE</h1>
 		  <ul class="nostart" style="line-height:30px;">
-			  <li><a href="1st_masters _ME.html" style="color:brown;"><b>First Year</b></a></li>
+			  <li><a href="1st_masters _ME.html"><b>First Year</b></a></li>
 			  <li><a href="2nd_masters_ME.html" ><b>Second Year</b></a></li>
 		  </ul>
       </div>
@@ -86,10 +86,6 @@
 
 		  </tr>
 	  </table>
-
-	  
-	  
-	  
     </div>
   </div>
 </div>
