--- a/pages/faculty/2.html
+++ b/pages/faculty/2.html
@@ -12,7 +12,7 @@
   <div id="container" class="clear"> 
     <div id="content" style="width:65%;">
       <h1 class="title">Dr. Pardeep Kumar</h1>
-      <img src="../../images/pk.jpg" style="float:left;height:200px;">
+      <img src="../../images/pk.jpg" style="float:left;height:200px;width:150px;">
 	  <table style="width:100%;color:BLACK;font-size:13;border:0;margin-top:240px;">
 		  <tr>
 			<td>
