changes in index.html

--- a/index.html
+++ b/index.html
@@ -338,6 +338,9 @@ margin-right:auto;
             <li>
                 <img src="images/demo/featured-slide/_DSC1715.JPG" alt="" />
             </li>
+            <li>
+                <img src="images/demo/featured-slide/3.jpg" alt="" />
+            </li>
 			<li>
                 <img src="images/demo/featured-slide/_DSC1698.JPG" alt="" />
             </li>
@@ -347,14 +350,14 @@ margin-right:auto;
 			<li>
                 <img src="images/demo/featured-slide/_DSC1644.JPG" alt="" />
             </li>
+            <!--<li>-->
+                <!--<img src="images/demo/featured-slide/6.jpg" alt="" />-->
+            <!--</li>-->
 			<li>
                 <img src="images/demo/featured-slide/_DSC1677.JPG" alt="" />
             </li>
             <li>
                 <img src="images/demo/featured-slide/arduino.png" alt="" />
-            </li>
-            <li>
-                <img src="images/demo/featured-slide/_DSC1645.JPG" alt="" />
             </li>
 			<li>
                 <img src="images/demo/featured-slide/_DSC1724.JPG" alt="" />
